[project]
name = "graph-trip"
version = "0.1.0"
description = "TD notebook on BFS, DFS and shortest path algorithms with Paris road network"
requires-python = ">=3.11"
dependencies = [
    "osmnx>=1.6.0",
    "networkx>=2.5,<2.7",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "ipykernel>=6.0.0",
    "geopandas>=0.13.0",
    "jupyterlab",
    "streamlit>=1.28.0",
    "scikit-learn>=1.4.0",
    "opentsne>=1.0.4",
    "pandas<=1.3.5",
    "umap-learn>=0.5.0",
    "karateclub>=1.3.0",
    "pycaret>=3.3.0",
    "tqdm>=4.0.0",
]
